remove some warnings pointed by FindBugs